--- a/python_functions/.gitignore
+++ b/python_functions/.gitignore
@@ -67,3 +67,8 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# dotenv environment variables file example
+.env.starlis-ai
+.env
+__pycache__
