--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "md5": "latest",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -60,8 +62,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
+    "@types/firebase": "^2.4.32",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
