--- a/package.json
+++ b/package.json
@@ -43,10 +43,8 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "md5": "latest",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -59,12 +57,15 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "md5": "latest",
+    "firebase": "latest",
+    "otpauth": "latest",
+    "qrcode": "latest"
   },
   "devDependencies": {
-    "@types/firebase": "^2.4.32",
-    "@types/node": "^22.13.14",
-    "@types/react": "^19.0.12",
+    "@types/node": "^22",
+    "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
