--- a/package.json
+++ b/package.json
@@ -59,11 +59,14 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
-    "md5": "latest",
+    "ws": "latest",
     "firebase": "latest",
     "otpauth": "latest",
     "qrcode": "latest",
-    "framer-motion": "latest"
+    "framer-motion": "latest",
+    "twilio": "latest",
+    "openai": "latest",
+    "md5": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
