--- a/starlis-callhandling/package.json
+++ b/starlis-callhandling/package.json
@@ -15,6 +15,9 @@
     "@fastify/websocket": "^11.0.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
+    "fastify-formbody": "^5.2.0",
+    "fastify-websocket": "^4.2.2",
+    "firebase-admin": "^13.2.0",
     "twilio": "^5.5.1",
     "ws": "^8.18.1"
   }
