Added authorization and security with JWT token generation and usage.

--- a/starlis-callhandling/example.env
+++ b/starlis-callhandling/example.env
@@ -8,6 +8,9 @@
 # TWILIO_PHONE_NUMBER=<your-twilio-phone-number>
 
 
+JWT_SECRET=your-secure-jwt-secret-key
+ALLOWED_ORIGINS=https://your-frontend-domain.com,https://your-backend-domain.com
+
 FIREBASE_SERVICE_ACCOUNT_KEY='{
   "type": "service_account",
   "project_id": "your-project-id",
