--- a/starlis-callhandling/package.json
+++ b/starlis-callhandling/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
     "@fastify/websocket": "^11.0.2",
     "dotenv": "^16.4.7",
