--- a/starlis-callhandling/nginx.conf
+++ b/starlis-callhandling/nginx.conf
@@ -15,11 +15,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 86400; # 24 hours
+        proxy_send_timeout 86400; # 24 hours
     }
 
     # Proxy for WebSocket server
     location /stream {
-        proxy_pass http://localhost:8001;
+        proxy_pass http://localhost:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -27,5 +29,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 86400; # 24 hours
+        proxy_send_timeout 86400; # 24 hours
     }
 }
