--- a/starlis-callhandling/nginx.conf
+++ b/starlis-callhandling/nginx.conf
@@ -18,7 +18,7 @@ server {
         proxy_read_timeout 86400; # 24 hours
         proxy_send_timeout 86400; # 24 hours
 
-        # CORS headers
+        # CORS headers for HTTP requests
         add_header 'Access-Control-Allow-Origin' $http_origin always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Origin, Accept' always;
@@ -57,5 +57,17 @@ server {
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Origin, Accept' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Max-Age' '86400' always;
+
+        # Handle preflight requests for WebSocket
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' $http_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Origin, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' '86400' always;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
 }
