--- a/agents-mcp/pyproject.toml
+++ b/agents-mcp/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.11.16",
+    "beautifulsoup4>=4.13.3",
     "fastapi>=0.115.12",
     "google-api-python-client>=2.166.0",
     "google-auth>=2.38.0",
