--- a/agents-mcp/pyproject.toml
+++ b/agents-mcp/pyproject.toml
@@ -7,12 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.11.16",
     "beautifulsoup4>=4.13.3",
+    "canvasapi>=3.3.0",
     "fastapi>=0.115.12",
     "google-api-python-client>=2.166.0",
     "google-auth>=2.38.0",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "googlemaps>=4.10.0",
+    "html2text>=2024.2.26",
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
     "openai-agents>=0.0.8",
