--- a/agents-mcp/pyproject.toml
+++ b/agents-mcp/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "googlemaps>=4.10.0",
+    "gradescopeapi>=1.4.1",
     "html2text>=2024.2.26",
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
@@ -21,6 +22,7 @@ dependencies = [
     "pydotenv>=0.0.7",
     "python-dotenv>=1.1.0",
     "pytz>=2025.2",
+    "requests>=2.32.3",
     "sendgrid>=6.11.0",
     "sse-starlette>=2.2.1",
     "uvicorn>=0.34.0",
