--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "framer-motion": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "katex": "^0.16.21",
     "lucide-react": "^0.454.0",
     "md5": "latest",
     "next": "15.1.0",
@@ -67,7 +68,9 @@
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "latest",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^1.7.1",
     "split-pane-react": "^0.1.3",
     "tailwind-merge": "^2.5.5",
