--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,9 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/uuid": "^10.0.0",
     "ai": "^4.3.4",
     "autoprefixer": "^10.4.20",
